referencia de banco em aplication properties e classe Categoria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=pedidosApi
+
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pedidos-db
+spring.datasource.username=postgres
+spring.datasource.password=pg#14
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
